# xviv

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG  FEATURES.md  README.md  USAGE.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/xviv/: __init__.py  __main__.py  bd_deps.py  cli.py  command.py  config.py  hooks.py  inference.py  platform.py  utils.py  vitis.py  vivado.py  waveform.py  wrapper.py  xviv.py
src/xviv/catalog/: catalog.py  completer.py  data.py  model.py  parsers.py
src/xviv/cli/: app.py  commands.py  completers.py  main.py  parser.py
src/xviv/cli/command/: base.py  bd.py  build.py  config.py  create.py  edit.py  elaborate.py  generate.py  open.py  processor.py  program.py  reload.py  search.py  simulate.py  synth.py
src/xviv/cli/commands/: bd.py  core.py  ip.py  sim.py  synth.py  waveform.py  xsct.py
src/xviv/config/: catalog.py  config.py  loader.py  model.py  params.py  project.py  sections.py  tcl.py
src/xviv/core_catalog/: completer.py  parser.py
src/xviv/embedded/: platform.py
src/xviv/functions/: all.py  bd.py  bsp.py  core.py  formal.py  graph.py  ip.py  simulation.py  status.py  synthesis.py  validate.py  xsct.py
src/xviv/generator/: hooks.py  sby.py  wrapper.py
src/xviv/generator/tcl/: builder.py  commands.py
src/xviv/parsers/: __init__.py  bd_file.py  bd_json.py  component_xml.py  ip_xml.py  rtl.py  vv_index_xml.py  xdc.py
src/xviv/scripts/: synthesis.tcl  xviv.tcl  xviv_xsct.tcl
src/xviv/scripts/bd/: create.tcl  edit.tcl  export.tcl  generate.tcl  util.tcl
src/xviv/scripts/core/: create.tcl  edit.tcl  generate.tcl
src/xviv/scripts/dispatch/: vivado.tcl  xsct.tcl
src/xviv/scripts/ip/: create.tcl  edit.tcl  utils.tcl
src/xviv/scripts/reports/: utilisation.tcl
src/xviv/scripts/synth/: open_dcp.tcl  standalone.tcl  synthesis.tcl  util.tcl
src/xviv/simulation/: waveform.py
src/xviv/tools/: symbiyosys.py  util.py  verilator.py  vitis.py  vivado.py  xsct.py
src/xviv/utils/: ascii_table.py  display.py  error.py  fifo.py  fs.py  git.py  hash.py  job.py  log.py  parallel.py  process.py  stream.py  term.py  theme.py  tools.py
tests/: conftest.py  helpers.py  test_2.py  test_bd_synth.py  test_comprehensive.py  test_functions.py  test_overall.py  test_parsers_bd_json.py  test_parsers_component_xml.py  test_parsers_vv_index_xml.py  test_process_exceptions.py  test_project_config.py  test_project_exceptions.py  test_tcl_commands.py  test_tcl_generator.py  test_tcl_generator_exceptions.py  test_tool_runners.py  test_tools_vivado.py  test_utils_fs.py  test_utils_git_parallel_fifo.py  test_xviv.py
tests/fixtures/: custom_ip_core.toml  design_synth.toml  formal_all_modes.toml  minimal.toml  multi_fpga.toml  simulation_xsim.toml
tests/fixtures/bd/: flat.bd.json  nested.bd.json
tests/integration/: test_cli_dispatch.py  test_error_surfaces.py  test_lock_roundtrip.py  test_toml_fixtures.py
tests/unit/config/: test_loader.py  test_lock.py  test_model.py  test_project.py  test_project_resolve.py  test_project_synth.py
tests/unit/generator/: test_tcl_builder.py  test_tcl_project.py  test_tcl_synth.py
tests/unit/parsers/: test_bd_json.py
tests/unit/tools/: test_verilator_runner.py  test_vivado_runner.py  test_xsct_runner.py
tests/unit/utils/: test_display.py  test_error.py  test_fs.py  test_git.py  test_hash.py  test_job.py  test_stream.py
