[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xviv"
version = "0.2.0"
description = "FPGA project controller for Vivado"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pyslang", "argcomplete", "toml", "argparse"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
	"License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license = {text = "MIT"}
keywords = ["fpga", "vivado", "xilinx", "eda", "rtl"]

[project.urls]
Homepage   = "https://github.com/laperex/xviv"
Repository = "https://github.com/laperex/xviv"
Issues     = "https://github.com/laperex/xviv/issues"

[project.scripts]
xviv = "xviv.xviv:main"
xviv_wrapper = "xviv.wrapper:main"
xviv_inference = "xviv.inference:main"

[tool.hatchling.build.targets.wheel]
packages = ["src/xviv"]