[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "xviv"
dynamic = ["version"]
description = "Declarative CLI for Xilinx Vivado and Vitis — reproducible FPGA builds from project.toml"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pyslang <= 10.0.0", "argcomplete", "toml", "tomlkit", "argparse", "click"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = {text = "MIT"}
keywords = ["fpga", "vivado", "xilinx", "eda", "rtl"]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
    "pytest"
]

[tool.hatch.version]
source = "vcs"

[project.urls]
Homepage   = "https://github.com/laperex/xviv"
Repository = "https://github.com/laperex/xviv"
Issues     = "https://github.com/laperex/xviv/issues"

[project.scripts]
xviv = "xviv.xviv:main"
xviv_wrapper = "xviv.generator.wrapper:main"

[tool.hatchling.build.targets.wheel]
packages = ["src/xviv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", '.']

[tool.ruff]
line-length = 150

[tool.ruff.format]
indent-style = "tab"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "I"]